2006-08-20  Thomas Moschny  <thomas.moschny@gmx.de>

	* contrib/monotone.zsh_completion: Revised completion for almost
	all commands, especially cat, co, diff, drop, log, propagate,
	status, and update. Updated list of subcommands for db, ls, and
	automate. Fixed indentation. Add author information.

2006-08-20  Richard Levitte  <richard@levitte.org>

	* NEWS: Small typo corrected ("merge" => "merger").
	* po/sv.po: Fixed a few fuzzies and untranslated strings.

2006-08-20  Nathaniel Smith  <njs@pobox.com>

	* win32/monotone.iss, visualc/config.h, monotone.spec:
	* debian/changelog, configure.ac, UPGRADE: Bump version number to
	0.29.

2006-08-20  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Draft 0.29 release notes.

	* cmd_ws_commit.cc (status): Print "no changes", when there are no
	changes.  Also, use F() for all strings, so that they will be
	available for translation.

	* monotone.texi (Hooks): Document that you can set MTN_MERGE or
	lua variable 'merger' to control what merger is selected.
	(Other Transports): Document the ssh://host/~/foo syntax.
	
2006-08-18  Nathaniel Smith  <njs@pobox.com>

	* tests/log_quits_on_SIGPIPE/__driver__.lua: Increase the time we
	give the background process to die on its own, before we decide it
	failed and just kill it.  Hopefully will work better on the loaded
	buildslaves now?

2006-08-18  Nathaniel Smith  <njs@pobox.com>

	* unix/main.cc (interrupt_signal): Newline-terminate our
	"operation canceled" message.

2006-08-18  Richard Levitte  <richard@levitte.org>

	* INSTALL: Say that a Debian user needs to install
	libboost-program-options-dev as well.

2006-08-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* std_hooks.lua: Fix some brokenness from the merge hook changes.

2006-08-15  Zack Weinberg  <zackw@panix.com>

	* Makefile.am: put the lists back the way they were (mostly).

2006-08-15  Timothy Brownawell  <tbrownaw@gmail.com>

	* tests/log_quits_on_SIGPIPE/: Try to make the test work.
